--- a/src/components/HeaderHome/HeaderHome.css
+++ b/src/components/HeaderHome/HeaderHome.css
@@ -12,6 +12,7 @@
   --cardBG: rgb(225, 225, 255);
 }
 
+
 .header-home {
   width: 100%;
   position: relative;
@@ -20,6 +21,7 @@
   justify-content: center;
   margin: auto;
 }
+
 .header-home .overlay {
   position: absolute;
   height: 100%;
@@ -29,190 +31,54 @@
   z-index: 1;
   mix-blend-mode: hard-light;
 }
+
 .header-home .bg-slide {
-  margin-top: 70px;
+  margin-top: 90px;
   border-radius: 50px;
   padding: 0 10px;
+  height: 540px;
 }
 
-.header-home video {
+.header-home .caption {
   position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  bottom: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  top: 93%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  font-family: 'Harrington', cursive;
+  font-size: 36px;
+  color: #fff;
+  text-align: center;
+  z-index: 2;
 }
-.header-home .homeContent {
+
+.header-home .controls {
+  position: absolute;
+  top: 50%;
   width: 100%;
-  height: -moz-max-content;
-  height: max-content;
-  padding: 8rem 1.5rem 3rem;
   display: flex;
-  row-gap: 3rem;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
-  margin: auto;
-  color: var(--whiteColor);
-  z-index: 100;
-}
-.header-home .homeContent .textDiv {
-  padding: 2rem 0;
-}
-.header-home .homeContent .textDiv .smallText {
-  font-size: 13px;
-  text-transform: uppercase;
-}
-.header-home .homeContent .textDiv .homeTitle {
-  position: relative;
-  font-size: 1.8rem;
-}
-.header-home .homeContent .cardDiv {
-  position: relative;
-  padding: 2rem 1rem;
-  background: var(--whiteColor);
-  border-radius: 10px;
-  gap: 1rem;
-}
-.header-home .homeContent .cardDiv label {
-  display: block;
-  color: var(--textColor);
-  padding-bottom: 10px;
-  font-size: 13px;
-  font-weight: 500;
-}
-.header-home .homeContent .cardDiv .label_total {
   justify-content: space-between;
   align-items: center;
-}
-.header-home .homeContent .cardDiv .label_total .total {
-  color: var(--textColor);
-  font-size: 18px;
-  padding-bottom: 10px;
-}
-.header-home .homeContent .cardDiv .input {
-  height: 40px;
-  padding: 0 1rem;
-  background: var(--inputColor);
-  border-radius: 3rem;
-}
-.header-home .homeContent .cardDiv .input input {
-  background: none;
-  border: none;
-  outline: none;
-  width: 100%;
-  font-size: 13px;
-  font-weight: 500;
-}
-.header-home .homeContent .cardDiv .input input::-moz-placeholder {
-  font-size: 13px;
-}
-.header-home .homeContent .cardDiv .input input::placeholder {
-  font-size: 13px;
-}
-.header-home .homeContent .cardDiv .input .icon {
-  font-size: 18px;
-  color: var(--PrimaryColor) !important;
-  margin-left: 10px;
-}
-.header-home .homeContent .cardDiv .input .input[type=range] {
-  background: blue;
-}
-.header-home .homeContent .cardDiv .searchOptions {
-  position: absolute;
-  background: var(--GradientColor);
-  width: -moz-max-content;
-  width: max-content;
-  bottom: -0.7rem;
-  -moz-column-gap: 0.8rem;
-       column-gap: 0.8rem;
-  padding: 5px 1rem;
-  border-radius: 3rem;
-  left: 50%;
-  transform: translate(-50%);
-  justify-content: center;
-  cursor: pointer;
-}
-.header-home .homeContent .cardDiv .searchOptions:hover {
-  background: var(--PrimaryColor);
-}
-.header-home .homeContent .cardDiv .searchOptions .icon {
-  font-size: 18px;
-}
-.header-home .homeContent .cardDiv .searchOptions span {
-  font-size: 13px;
-}
-.header-home .homeContent .homeFooterIcons {
-  width: 100%;
-  justify-content: space-between;
-}
-.header-home .homeContent .homeFooterIcons .icon {
-  font-size: 20px;
-  margin: 0 5px;
-  color: var(--whiteColor);
-  font-weight: 600;
-}
-.header-home .homeContent .homeFooterIcons .icon:hover {
-  color: var(--PrimaryColor);
+  z-index: 2;
 }
 
-@media screen and (min-width: 500px) {
-  .header-home .homeContent .textDiv .smallText {
-    font-size: 16px;
-  }
-  .header-home .homeContent .textDiv .homeTitle {
-    position: relative;
-    font-size: 2.3rem;
-    width: -moz-max-content;
-    width: max-content;
-  }
-  .header-home .homeContent .textDiv .homeTitle::after {
-    position: absolute;
-    content: "";
-    background: var(--SecondaryColor);
-    height: 5px;
-    width: 145px;
-    right: 0px;
-    bottom: 5px;
-    z-index: -1;
-  }
-  .header-home .homeContent .cardDiv {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.header-home .prev-btn,
+.header-home .next-btn {
+  background-color: #ddd;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  color: #555;
+  cursor: pointer;
+  margin: 0 10px;
+  transition: background-color 0.3s ease;
 }
-@media screen and (min-width: 600px) {
-  .header-home .homeContent .cardDiv {
-    padding: 2rem 1rem;
-    grid-template-columns: repeat(3, 1fr);
-  }
+
+.header-home .prev-btn:hover,
+.header-home .next-btn:hover {
+  background-color: #aaa;
+  color: #fff;
 }
-@media screen and (min-width: 940px) {
-  .header-home {
-    height: 80vh;
-  }
-}
-@media screen and (min-width: 1240px) {
-  .header-home {
-    height: 95vh;
-  }
-  .header-home .homeContent {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .header-home .homeContent .cardDiv {
-    padding: 2rem 1rem;
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .header-home .homeContent .cardDiv .input {
-    margin-bottom: 1rem;
-  }
-  .header-home .homeContent .cardDiv .searchOptions {
-    bottom: -1rem;
-    padding: 8px 1rem;
-  }
-  .header-home .homeContent .cardDiv .searchOptions span {
-    font-size: 17px;
-  }
-}
+
