[FE] Fix css + title

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -54,19 +54,19 @@
   box-shadow: 1 4px 4px rgba(85, 85, 114, 0.549);
   transition: 0.3s ease;
 }
-.main .secContent .singleDestination .imgDiv {
+.main .secContent .singleDestination .imageDiv {
   height: 180px;
   width: 100%;
   overflow: hidden;
 }
-.main .secContent .singleDestination .imgDiv img {
+.main .secContent .singleDestination .imageDiv img {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   transition: 2s ease;
 }
-.main .secContent .singleDestination .imgDiv:hover img {
+.main .secContent .singleDestination .imageDiv:hover img {
   transform: scale(1.1);
 }
 .main .secContent .singleDestination .cardInfo {
@@ -141,6 +141,11 @@
   color: yellow;
 }
 
+/* .img-div {
+  width: 336px;
+  height: 243px;
+  object-fit: cover;
+} */
 
 
 
