--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -29,6 +29,7 @@
   padding: 12px 16px;
   border-radius: 8px;
   min-width: 250px;
+  width: 100%;
 
   &:not(:placeholder-shown) ~ .placeholder,
   &:focus-within ~ .placeholder {
