--- a/src/pages/Form/form.module.scss
+++ b/src/pages/Form/form.module.scss
@@ -43,6 +43,7 @@
     display: flex;
     gap: 30px;
     margin-top: 30px;
+    // flex-wrap: wrap;
   }
 
   .formGroup {
@@ -68,6 +69,29 @@
         background-color: #333;
         color: #fff;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .wrap {
+    padding-top: 100px;
+    height: auto;
+  }
+  .wrapForm {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 90vw;
+    .formForm {
+      margin-top: 30px;
+    }
+    .formData {
+      flex-direction: column;
+      gap: 0px;
+    }
+
+    .input > input {
+      width: 100%;
     }
   }
 }
