--- a/src/components/modules/home/HeaderHome/HeaderHome.css
+++ b/src/components/modules/home/HeaderHome/HeaderHome.css
@@ -5,13 +5,12 @@
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(201, 33%, 16%);
   --textColor: hsl(240, 4%, 36%);
-  --whiteColorDeam: hsl(0, 0%, 93%);
+  --whiteColorDeam: #fff;
   --greyText: rgb(190, 190, 190);
   --inputColor: rgb(239, 239, 239);
   --bodyColor: rgb(240, 240, 240);
   --cardBG: rgb(225, 225, 255);
 }
-
 
 .header-home {
   width: 100%;
@@ -81,4 +80,3 @@
   background-color: #aaa;
   color: #fff;
 }
-
