--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'Roboto', sans-serif;
 }
 
 /* colors and styling */
@@ -16,7 +17,8 @@
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(201, 33%, 16%);
   --textColor: hsl(240, 4%, 36%);
-  --whiteColorDeam: hsl(0, 0%, 93%);
+  /* --whiteColorDeam:  #fff; */
+  --whiteColorDeam: #fff;
   --greyText: rgb(190, 190, 190);
   --inputColor: rgb(239, 239, 239);
   --bodyColor: rgb(240, 240, 240);
@@ -72,7 +74,18 @@ li {
   color: var(--whiteColor);
   font-weight: 500;
 }
-
+.py-8 {
+  padding-top: 3px;
+  padding-bottom: 32px;
+}
+.py-1 {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+.py-4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 .btn:hover {
   background: var(--SecondaryColor);
 }
@@ -88,7 +101,7 @@ input {
 }
 
 body {
-  background: var(--bodyColor);
+  background: #fff;
 }
 
 @media screen and (min-width: 1240px) {
@@ -122,7 +135,9 @@ html *::-webkit-scrollbar-track {
   border-radius: 0;
   background-color: rgba(0, 0, 0, 0);
 }
-
+.bg-white {
+  background-color: #fff;
+}
 /* custom checkbox */
 .checkbox-wrapper-4 * {
   box-sizing: border-box;
