--- a/src/components/modules/home/Main/Main.css
+++ b/src/components/modules/home/Main/Main.css
@@ -5,7 +5,7 @@
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(201, 33%, 16%);
   --textColor: hsl(240, 4%, 36%);
-  --whiteColorDeam: hsl(0, 0%, 93%);
+  --whiteColorDeam: #fff;
   --greyText: rgb(190, 190, 190);
   --inputColor: rgb(239, 239, 239);
   --bodyColor: rgb(240, 240, 240);
@@ -26,7 +26,7 @@
 }
 .main .secTitle .title::after {
   position: absolute;
-  content: "";
+  content: '';
   background: var(--SecondaryColor);
   height: 5px;
   width: 80px;
@@ -63,7 +63,7 @@
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: 2s ease;
 }
 .main .secContent .singleDestination .imageDiv:hover img {
@@ -112,7 +112,6 @@
   border-radius: 1rem;
   color: var(--whiteColor);
   padding: 1px 10px;
-  
 }
 .main .secContent .singleDestination .cardInfo .fees .price {
   font-size: 2rem;
@@ -162,4 +161,4 @@
   .secContent .singleDestination {
     height: auto;
   }
-}/*# sourceMappingURL=Main.css.map */
+} /*# sourceMappingURL=Main.css.map */
