--- a/src/layouts/partials/Navbar/Navbar.css
+++ b/src/layouts/partials/Navbar/Navbar.css
@@ -5,7 +5,8 @@
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(201, 33%, 16%);
   --textColor: hsl(240, 4%, 36%);
-  --whiteColorDeam: hsl(0, 0%, 93%);
+  /* --whiteColorDeam:  #fff; */
+  --whiteColorDeam: #fff;
   --greyText: rgb(190, 190, 190);
   --inputColor: rgb(239, 239, 239);
   --bodyColor: rgb(240, 240, 240);
