--- a/src/components/modules/home/Item/Item.scss
+++ b/src/components/modules/home/Item/Item.scss
@@ -43,6 +43,7 @@
               height:60px;
               margin-right: 0;
               width:60px;
+              display: inline-block;
             }
 
             span {
